<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instructions\n"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/image_navigate" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:onClick="cancelDialog"
            android:text="Cool!"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>
