<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="Pro Tip"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:fontFamily="sans-serif-black"
            android:text="Instead of typing everything, you can use the speech-to-text feature inbuilt in your keyboard.\n" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/protip_step1" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/protip_step2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/protip_1_edittext_image" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/protip_step3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/protip_2_record" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/protip_3_init_image" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/protip_step4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/protip_4_speaknow" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@drawable/protip_5_listening_image" />

        <com.techiespace.projects.hark.HTMLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/protip_step5" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:onClick="cancelDialog"
            android:text="Cool!"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>